--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -10,8 +10,17 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!---CSS--->
     <link rel="stylesheet" href="../css/estilos.css">
-    <!---ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!----META DESCRIPTION ---->
+    <meta name="description" content="Todo el calzado que desees, running, training, fútbol, moda, de la mano de las mejores marcas del mercado te traemos la mejor caldiad">
+    <!----KEYWORD---->
+    <meta name="keywords" content="calzado, futbol, championes, zapatillas, correr, caminar, entrenar, gimnasio, saltar, adidas, nike, puma">
+    <!----FAVICON---->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <!----OPEN GRAPH---->
+    <meta property="og:type" content="ecommerce">
+    <meta property="og:title" content="El Rincón - Calzado">
+    <meta property="og:description" content="Calzado casual y deportivo, la mejor calidad al mejor precio">
 </head>
 
 <body>
