--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Rincón</title>
+    <title>El Rincón - Accesorios</title>
     <!---BOOSTRAP--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <!---ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!----META DESCRIPTION ---->
+    <meta name="description" content="Los mejores accesorios para el día a día y para todo tipo de deportes!">
+    <!----KEYWORD---->
+    <meta name="keywords" content="accesorios, vinchas, pelotas, infladores, muñequeras, gorros, mochilas, bolsos, medias">
+    <!----FAVICON---->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <!----OPEN GRAPH---->
+    <meta property="og:type" content="ecommerce">
+    <meta property="og:title" content="El Rincón - Accesorios">
+    <meta property="og:description" content="Accesorios casuales y deportivos, la mejor calidad al mejor precio">
 </head>
 
 <body>
@@ -369,7 +379,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/acc-puma-morral-academy-portable.png" alt="morral puma academy portable">
+                    <img src="../img/acc-puma-morral-academy-portable.png" alt="morral puma academy">
                     <h3>MORRAL PUMA ACADEMY PORTABLE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
