--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Rincón</title>
+    <title>El Rincón - Indumentaria</title>
     <!---BOOSTRAP--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -12,6 +12,16 @@
         <link rel="stylesheet" href="../css/estilos.css">
     <!---ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!----META DESCRIPTION ---->
+    <meta name="description" content="Toda la indumentaria que desees la encontras en El Rincon">
+    <!----KEYWORD---->
+    <meta name="keywords" content="buzos, remeras, canguros, camperas, top, calzas, pantalones, short, training, running, moda, futbol, basket, deportes">
+    <!----FAVICON---->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <!----OPEN GRAPH---->
+    <meta property="og:type" content="ecommerce">
+    <meta property="og:title" content="El Rincón - Indumentaria">
+    <meta property="og:description" content="Indumentaria casual y deportiva, la mejor calidad al mejor precio">
 </head>
 
 <body>
@@ -331,8 +341,7 @@
             </div>
             <div class="productos">
                 <a href="">
-                    <img src="../img/indu-uruguay-remera-puma-training.png" alt="remera puma training uruguay" >
-                        alt="vomero hombre gris">
+                    <img src="../img/indu-uruguay-remera-puma-training.png" alt="remera puma training uruguay">
                     <h3>REMERA PUMA URUGUAY TRAINING</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
