--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -1,13 +1,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Rincón</title>
+    <title>El Rincón - Rebajas</title>
     <!---BOOSTRAP--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!---CSS--->
     <link rel="stylesheet" href="../css/estilos.css">
-    <!---ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!----META DESCRIPTION ---->
+    <meta name="description" content="Descuentos de hasta un 60%, no te lo podes perder">
+    <!----KEYWORD---->
+    <meta name="keywords" content="rebajas, loft, sale, descuento, accesorios, indumentaria, calzado, pelotas, ropa, buzo, campera, gorros, bolsos, mochilas, ">
+    <!----FAVICON---->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <!----OPEN GRAPH---->
+    <meta property="og:type" content="ecommerce">
+    <meta property="og:title" content="El Rincón - Rebajas">
+    <meta property="og:description" content="Accesorios casuales y deportivos, la mejor calidad al mejor precio">
 </head>
 
 <body>
