mediaq tercer-preentrega

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <form action="">
                         <ul>
                             <li>
-                                <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
+                                <input class="suscribite-footer" type="email" name="email" required="" placeholder="Ingresa tu e-mail">
                             </li>
                             <li>
                                 <button class="btn btn-outline-dark" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">SUSCRIBIRME
@@ -279,12 +279,12 @@
                 <h3>EMPRESA</h3>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="./pages/nosotros.html">
                             <p>Nosotros</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./pages/contacto.html">
                             <p>Contacto</p>
                         </a>
                     </li>
