--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -366,12 +366,12 @@
                 <h3>EMPRESA</h3>
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="./nosotros.html">
                             <p>Nosotros</p>
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./contacto.html">
                             <p>Contacto</p>
                         </a>
                     </li>
