--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -227,10 +227,10 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/naim.caceres18/" target="_blank">
-                            <img src="../img/instagram.png" width="50" alt="Instagram">
+                            <img src="../img/instagram.png" alt="Instagram">
                         </a>
                         <a href="https://twitter.com/naimcaceres18" target="_blank">
-                            <img src="../img/twitter.png" width="50" alt="Twitter">
+                            <img src="../img/twitter.png" alt="Twitter">
                         </a>
                     </li>
                 </ul>
