--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -182,6 +182,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-adidas-gorro-performance-beanie.png" alt="gorro de lana adidas gris">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">GORRO ADIDAS PERFORMANCE BANIE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -261,8 +262,7 @@
             </div>
             <div class="imagenes-rebajas">
                 <a href="">
-                    <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png" alt="adidas ozelle cloudfoam" >
-                        alt="court vision low blancas">
+                    <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png" alt="adidas ozelle cloudfoam">
                     <h3 class="producto-rebaja">ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
