--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class="recomendados-contenedor">
                 <div class="vomero-16">
                     <a href="">
+                        <div class="rebajas-recomendados">REBAJAS</div>
                         <img src="./img/vomero16-hombre-gris.png" alt="vomero hombre gris">
                         <h3>NIKE AIR ZOOM VOMERO 16</h3>
                         <div>
@@ -138,6 +139,7 @@
                 </div>
                 <div class="w-adidas-startyourrun-violeta">
                     <a href="">
+                        <div class="rebajas-recomendados">REBAJAS</div>
                         <img src="./img/w-adidas-startyourrun-violeta.png" alt="w adidas startyounrrun violeta">
                         <h3>ADIDAS STARTYOURRUN </h3>
                         <div>
@@ -249,6 +251,18 @@
                         <img class="disciplinas-niños-img" src="./img/niños-comprar.png" alt="niños">
                     </a>
                 </div>
+            </div>
+        </section>
+        <section class="hombre-mujer">
+            <div class="seccion-hombre">
+                <a href="">
+                    <img src="./img/indumentaria-hombre-index.png" alt="indumentaria-hombre">
+                </a>
+            </div>
+            <div class="seccion-mujer">
+                <a href="">
+                    <img src="./img/indumentaria-mujer-index.png" alt="indumentaria-mujer">
+                </a>
             </div>
         </section>
     </main>
