--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Rincón - Indumentaria</title>
-    <!---BOOSTRAP--->
+    <!----BOOSTRAP---->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!----CSS---->
-        <link rel="stylesheet" href="../css/estilos.css">
-    <!---ANIMATIONS---->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!----ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!----META DESCRIPTION ---->
     <meta name="description" content="Toda la indumentaria que desees la encontras en El Rincon">
