--- a/pages/rebajas.html
+++ b/pages/rebajas.html
@@ -2,15 +2,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Rincón - Rebajas</title>
-    <!---BOOSTRAP--->
+    <!----BOOSTRAP---->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!---CSS--->
+    <!----CSS---->
     <link rel="stylesheet" href="../css/estilos.css">
+    <!----ANIMATIONS---->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!----META DESCRIPTION ---->
     <meta name="description" content="Descuentos de hasta un 60%, no te lo podes perder">
     <!----KEYWORD---->
-    <meta name="keywords" content="rebajas, loft, sale, descuento, accesorios, indumentaria, calzado, pelotas, ropa, buzo, campera, gorros, bolsos, mochilas, ">
+    <meta name="keywords" content="rebajas, loft, sale, descuento, accesorios, indumentaria, calzado, pelotas, ropa, buzo, campera, gorros, bolsos, mochilas, nike, puma, adidas, lacoste, converse">
     <!----FAVICON---->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <!----OPEN GRAPH---->
@@ -199,6 +200,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-mochila-element.png" alt="mochila nike elemnt">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">MOCHILA NIKE ELEMENTAL</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -215,6 +217,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-nike-top-dri-fit.png" alt="w top dri fit verde">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">TOP NIKE DRI-FIT INDY V-NECK</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -231,6 +234,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-acc-umbro-canilleras-pro.png" alt="canilleras de futbol umbro pro">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">CANILLERAS UMBRO PRO</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -247,6 +251,7 @@
                 <div class="imagenes-rebajas">
                     <a href="">
                     <img src="../img/rebajas-calzado-adidas-adilette-comfort.png" alt="adidas adilette comofrt">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">ADIDAS ADILETTE COMFORT</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -263,6 +268,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-adidas-ozelle-cloudfoam-lifestyle.png.png" alt="adidas ozelle cloudfoam">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">ADIDAS OZELLE CLOUDFOAM LIFESTYLE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -279,6 +285,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-nike-react-infinity-runfk3.png" alt="nike react infinity run fk3">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">NIKE REACT INFINITY RUN FK 3</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -295,6 +302,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-calzado-puma-anzarun-lite-slipon.png" alt="calzado puma anzarun lit slipon">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">PUMA ANZARUN LITE SLIPON</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -311,6 +319,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-pantalon-stardust-jogger.png" alt="pantalon adidas stardust">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">PANTALON NIKE NSW STARDUST JOGGER</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -327,6 +336,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-dri-fit-run-division.png" alt="remera nike dri-fit bordo">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">REMERA NIKE DRI-FIT RUN DIVISION</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -343,6 +353,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-psg-alternativa.png" alt="camiseta psg alternativa">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">REMERA NIKE PSG ALTERNATIVO</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
@@ -359,6 +370,7 @@
             <div class="imagenes-rebajas">
                 <a href="">
                     <img src="../img/rebajas-indu-nike-remera-sportwear-club-tee.png" alt="w remera nike spw salmon">
+                    <div class="texto-rebajas">REBAJAS</div>
                     <h3 class="producto-rebaja">REMERA NIKE SPORTWEAR CLUB TEE</h3>
                     <div class="precios-contenedor">
                         <strong class="precio">
