segunda pre entrega js

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <meta property="og:type" content="ecommerce">
     <meta property="og:title" content="El Rincón">
     <meta property="og:description" content="Tienda casual y deportiva online, la mejor calidad al mejor precio">
-</head>
+</head>\
 
 <body>
     <header>
         <h2>ENVÍO GRATIS A TODO EL PAÍS</h2>
-        <div>
+        <div id="titulo">
             <a href="./index.html">
                 <h1>EL RINCÓN</h1>
             </a>
@@ -265,7 +265,7 @@
                 </a>
             </div>
         </section>
-        <script src="./1entrega.js"></script>
+        <script src="./main.js"></script>
     </main>
 
     <footer id="contacto">
