--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -193,6 +193,7 @@
                             </del>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -205,6 +206,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>    
                 <div class="productos">
                     <a href="">
@@ -217,6 +219,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -233,6 +236,7 @@
                             </del>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -245,6 +249,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -257,6 +262,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -269,6 +275,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -281,6 +288,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -293,6 +301,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -309,6 +318,7 @@
                             </del>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -321,6 +331,7 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
                 <div class="productos">
                     <a href="">
@@ -333,8 +344,10 @@
                             </strong>
                         </div>
                     </a>
+                    <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
             </div>
+            <div id="carritoContenedor"></div>
         </section>
     </main>
     
@@ -455,6 +468,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
+    <script src="../main.js"></script>
+</body>
 </body>
 
 </html>
