Entrega final JS

--- a/pages/calzado.html
+++ b/pages/calzado.html
@@ -347,6 +347,7 @@
                     <button type="button" class="agregarCarrito">Agregar al carrito</button>
                 </div>
             </div>
+            <div id="contenedorProductos"></div>
             <div id="carritoContenedor"></div>
         </section>
     </main>
